<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/px30">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Tv15black"
                    android:layout_weight="1"
                    android:text="@string/cache_selection"
                    android:textSize="@dimen/size34" />

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/delet_zhaopian_1x" />

            </LinearLayout>

            <com.yc.jianjiao.weight.WithScrollGridView
                android:id="@+id/gridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="5" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <View style="@style/divider_dropshadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/Tv15black"
                    android:id="@+id/tv_all"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/px20"
                    android:text="@string/all_election"
                    android:textSize="@dimen/size32" />

                <View
                    android:layout_width="1dp"
                    android:background="@color/white_f4f4f4"
                    android:layout_height="match_parent" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatTextView
                        style="@style/Tv15black"
                        android:id="@+id/tv_look"
                        android:padding="@dimen/px20"
                        android:layout_width="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/view_cache"
                        android:textSize="@dimen/size32" />

                    <android.support.v7.widget.AppCompatTextView
                        android:text="0"
                        android:id="@+id/tv_cache_size"
                        android:layout_gravity="right"
                        android:layout_marginRight="@dimen/px100"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:layout_width="15dp"
                        style="@style/Tv12gray"
                        android:background="@drawable/circle_red" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>