<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_top" />

        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ly_account_management"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px20"
                        android:background="?selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/px30"
                        android:paddingLeft="@dimen/px40"
                        android:paddingRight="@dimen/px40"
                        android:paddingTop="@dimen/px30">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/Tv15black"
                            android:layout_weight="1"
                            android:text="@string/account_management" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/Tv12gray"
                            android:drawablePadding="@dimen/px40"
                            android:drawableRight="@mipmap/home_a10" />

                    </LinearLayout>

                    <View style="@style/divider_1" />

                    <LinearLayout
                        android:id="@+id/ly_clear_cache"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/px20"
                        android:background="?selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/px30"
                        android:paddingLeft="@dimen/px40"
                        android:paddingRight="@dimen/px40"
                        android:paddingTop="@dimen/px30">

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/Tv15black"
                            android:layout_weight="1"
                            android:text="@string/clear_cache" />

                        <android.support.v7.widget.AppCompatTextView
                            style="@style/Tv12gray"
                            android:drawablePadding="@dimen/px40"
                            android:drawableRight="@mipmap/home_a10" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.flyco.roundview.RoundTextView
                    android:id="@+id/bt_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/px20"
                    android:gravity="center"
                    android:padding="@dimen/px20"
                    android:text="@string/sign_out"
                    android:textColor="@color/white"
                    app:rv_backgroundColor="@color/red"
                    app:rv_cornerRadius="@dimen/px10" />

            </LinearLayout>

        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

    </LinearLayout>

</layout>